--- a/app/styles/_footer.scss
+++ b/app/styles/_footer.scss
@@ -1,33 +1,18 @@
 .footer{
 	background-color: rgb(9, 32, 51);
-	padding-bottom: 4px;
-	@media screen and (max-width: 1199px){
-		padding-top: 20px;
-	}
+	padding-bottom: 5px;
+	min-height: 140px;
 	&__logo{
-		min-height: 90px;
-		display: -webkit-flex;
-		display: -moz-flex;
-		display: -ms-flex;
-		display: -o-flex;
-		display: flex;
-		justify-content: center;
-		flex-direction: column;
-		align-items: flex-end;
-		@media screen and (max-width: 1199px){
-			min-height: 0;
-		}
+		display: inline-block;
+		min-height: 60px;
+		max-width: 110px;
+		margin-bottom: 25px;
+		margin-top: 25px;
+		margin-left: 13px;
 		@media (max-width: $screen-sm-max){
-			padding-bottom: 20px;
-		}
-		a{
 			display: block;
-			max-width: 110px;
-			width: 100%;	
 			margin: 0 auto;
-			@media screen and (max-width: 1199px){
-				max-width: 90px;
-			}
+			padding-top: 25px;
 		}
 		img{
 			width: 100%;
@@ -35,29 +20,33 @@
 		}
 	}
 	&__menu-nav{
-		padding-top: 35px;
-		@media screen and (max-width: 1200px){
-			padding-top: 35px;			
+		margin-left: 55px;		
+		padding-top: 50px;
+		display: inline-block;
+		vertical-align: top;		
+		@media screen and (max-width: 1199px){
+			margin-left: 40px;
 		}
-		@media (max-width: $screen-md-max){
-			text-align: center;
+		@media (max-width: $screen-sm-max){
 			padding-top: 20px;
-		}
-		@media (max-width: $screen-xs-max){
-			padding-top: 0;
+			margin: 0;
+			display: block;
+			text-align: center;
+			padding-bottom: 10px;
 		}
 		
 		ul{
 			margin: 0;
 			padding: 0;
+			display: inline-block;
 			li{
 				list-style-type: none;
 				display: inline-block;
 				margin-right: 48px;
-				@media screen and (max-width: 1200px){
-					margin-right: 35px;					
+				@media screen and (max-width: 1199px){
+					margin-right: 30px;
 				}
-				@media (max-width: $screen-xs-max){
+				@media screen and (min-width: 320px) and (max-width: 490px) {
 					display: block;
 					margin: 0;
 				}
@@ -69,23 +58,29 @@
 					color: #fff;
 					font-size: 20px;
 					transition: all .5s;
-					@media screen and (max-width: 1199px){
-						font-size: 16px;
-					}
+					font-family: 'ProximaNova-Light';			
 					&:hover{
 						color: #ffca1c;
+					}
+					@media screen and (max-width: 1199px){
+						font-size: 18px;
 					}
 				}
 			}
 		}
 	}
 	&__contacts-block{
-		padding-top: 35px;
-		@media (max-width: $screen-md-max){
+		display: inline-block;
+		float: right;
+		padding-top: 50px;
+		@media (max-width: $screen-sm-max){
+			display: block;
+			float: none;
+			padding: 0;
 			text-align: center;
-			padding-top: 15px;
-			padding-bottom: 15px;
+			padding-bottom: 10px;
 		}
+
 		ul{
 			margin: 0;
 			padding: 0;
@@ -93,20 +88,26 @@
 				list-style-type: none;
 				display: inline-block;
 				margin-left: 31px;	
-				position: relative;				
+				position: relative;		
 				&:first-child{
-					margin-left: 31px;	
+					margin-left: 0;	
+					margin-right: 15px;
+					@media screen and (max-width: 1199px){
+						margin-right: 0;
+					}
 					&:before{
 						position: absolute;
 						content: "\f10b";
 						font-family: 'FontAwesome';
-						left: -20px;
+						left: -18px;
 						color:#fff;
-						font-size: 22px;
-						top: -2px;
-					}
-					@media (max-width: $screen-xs-max){
-						padding-bottom: 10px;
+						font-size: 20px;
+						top: 50%;
+						transform: translateY(-50%);
+						@media screen and (max-width: 1199px){
+							font-size: 20px;
+							left: -15px;
+						}
 					}
 				}	
 				&:last-child{
@@ -114,10 +115,15 @@
 						position: absolute;
 						content: "\f003";
 						font-family: 'FontAwesome';
-						left: -25px;
+						left: -24px;
 						color:#fff;
 						font-size: 15px;
-						top: 2px;
+						top: 50%;
+						transform: translateY(-50%);
+						@media screen and (max-width: 1199px){
+							font-size: 15px;
+							left: -20px;
+						}
 					}
 				}
 				a{
@@ -125,14 +131,12 @@
 					color: #fff;
 					font-size: 20px;
 					transition: all .5s;
-					font-weight: 600;	
-					@media screen and (max-width: 1200px){
-						font-size: 16px;
-					}
 					&:hover{
 						color: #ffca1c;
 					}
-
+					@media screen and (max-width: 1199px){
+						font-size: 18px;
+					}
 				}
 			}
 		}
@@ -142,37 +146,22 @@
 	}
 	&__copy{
 		padding-left: 20px;
-		@media (max-width: $screen-md-max){
-			padding-left: 0;
-		}
-		@media (max-width: $screen-xs-max){
-			text-align: center;	
-		}
+		display: inline-block;
 		p{
 			font-size: 14px;
 			color: #a0a0a0;
 			margin: 0;
-			padding-top: 5px;
-			@media (max-width: $screen-xs-max){
-				text-align: center;					
-			}
+			padding-top: 6px;
 		}
 	}
 	&__confidential{
-		text-align: right;
-		@media (max-width: $screen-xs-max){
-			text-align: center;	
-		}
+		float: right;
+		display: inline-block;
 		p{
 			font-size: 16px;
 			color: #a0a0a0;
 			margin: 0;
-			padding-top: 5px;
-			@media (max-width: $screen-xs-max){
-				text-align: center;	
-				font-size: 14px;
-				padding-top: 0;
-			}
+			padding-top: 4px;
 		}
 	}
 }
