--- a/app/styles/_soz.scss
+++ b/app/styles/_soz.scss
@@ -14,16 +14,28 @@
 			margin: 0;
 			padding-top: 15px;
 			padding-bottom: 20px;
+			@media (max-width: $screen-xs-max){
+				font-size: 18px;
+			}
 		}
 		ul{
 			margin: 0;
 			padding: 0;
 			padding-left: 100px;
+			@media screen and (max-width: 1199px){
+				padding-left: 40px;
+			}
+			@media (max-width: $screen-xs-max){
+				padding: 0;
+			}
 			li{
 				text-align: left;
 				list-style-type: none;
 				font-size: 20px;
 				padding-bottom: 10px;
+				@media (max-width: $screen-xs-max){
+					padding-left: 15px;
+				}
 				span{
 					font-weight: 600;
 					i{
@@ -42,15 +54,7 @@
 		}
 	}
 	&__img-wrap{
-		width: 100%;
-		height: 165px;
-		overflow: hidden;
-		img{
-			width: 100%;
-			max-width: 100%;
-		}
-	}
-	&__img-wrap{
+		max-width: 100%;
 		position: relative;
 		&:after{
 			position: absolute;
@@ -60,6 +64,10 @@
 			right: 0;
 			bottom: 0;
 			left: 0;
+		}
+		img{
+			width: 100%;
+			max-width: 100%;
 		}
 	}
 	&__advantages{
