--- a/app/styles/_services.scss
+++ b/app/styles/_services.scss
@@ -5,8 +5,11 @@
 		padding-top: 30px;
 		padding-bottom: 30px;
 	}
-	&__all-wrap{
-		padding-top: 15px;
+	.caption-wrap{
+		margin-bottom: 40px;
+		@media (max-width: $screen-xs-max){
+			margin-bottom: 20px;
+		}
 	}
 	&__block{
 		background-color: #eff1f5;	
@@ -26,10 +29,7 @@
 		&:after {
 			background-color: #243849;	
 			content: '';
-			position: absolute;
-			@media (max-width: $screen-sm-max){
-				background-color: transparent;
-			}
+			position: absolute;			
 		}
 		&:after {
 			height: 0;
@@ -48,10 +48,7 @@
 			}
 			.services__img-desc{
 				p{
-					color: #fff;
-					@media (max-width: $screen-sm-max){
-						color: #000;
-					}
+					color: #fff;				
 				}		
 				span{
 					color: #fff;
@@ -82,8 +79,8 @@
 			padding-left: 30px;
 		}
 		@media (max-width: $screen-xs-max){
-			padding-left: 50px;
-			padding-right: 15px;
+			padding-left: 0;
+			padding-right: 0;
 			width: 100%;
 			max-width: 100%;
 			min-height: 100px;
@@ -103,6 +100,8 @@
 		align-items: center;
 		@media (max-width: $screen-xs-max){
 			min-height: 100px;
+			padding-left: 15px;
+			padding-right: 10px;
 		}
 	}
 	&__img{
@@ -119,16 +118,17 @@
 		display: flex;
 		flex-direction: row;
 		justify-content: center;
-		align-items: center;
+		align-items: center;		
 		@media (max-width: $screen-md-max){
 			background-color: #fff;
 			width: 80px;
 			height: 80px;
 		}		
 		@media (max-width: $screen-xs-max){
-			width: 0;
-			height: 0;
-			padding-right: 30px;
+			width: 70px;
+			height: 70px;
+			position: absolute;
+			float: left;
 		}
 		i{
 			font-size: 43px;		
@@ -220,6 +220,7 @@
 			}
 			@media (max-width: $screen-xs-max) { 
 				font-size: 16px;
+				padding-left: 90px;
 				br{
 					display: none;
 				}
