--- a/app/styles/_about.scss
+++ b/app/styles/_about.scss
@@ -74,7 +74,7 @@
 	&__advantages{
 		text-align: center;
 		border-top: 1px solid #c0c1c4;
-		padding: 20px 0 15px;
+		padding: 30px 0 20px;
 		@media (max-width: $screen-md-max){
 			padding: 20px 0;			
 		}
@@ -96,15 +96,15 @@
 		}
 		p{
 			font-size: 25px;
-			font-weight: 500;
+			color: #000;
 			margin: 0;
 			@media (max-width: $screen-md-max){
 				font-size: 23px;
 			}
 			span{
-				font-weight: 600;
 				font-size: 35px;
 				padding-right: 10px;
+				color: #000;
 				@media (max-width: $screen-md-max){
 					font-size: 27px;
 					padding-right: 6px;
@@ -118,9 +118,9 @@
 			}
 		}
 		.img-wrap{
-			max-width: 165px;
-			min-height: 150px;
+			max-width: 167px;
 			margin: 0 auto;
+			margin-bottom: 10px;
 			img{
 				width: 100%;
 				max-width: 100%;
