--- a/app/styles/_dev.scss
+++ b/app/styles/_dev.scss
@@ -1,6 +1,6 @@
 .dev{
 	padding-top: 35px;
-	padding-bottom: 10px;
+	padding-bottom: 45px;
 	&__application{
 		padding: 25px 0;
 	}
@@ -28,6 +28,7 @@
 		background-position: 0px 110px;
 		background-repeat: no-repeat;
 		position: relative;		
+		background-image: url('../images/dev_bg.png');
 		@media screen and (max-width: 1199px){
 			background-size: contain;
 			background-position: 0 173px;
@@ -36,36 +37,97 @@
 			background-image: none;
 		}
 		&--bg-advancement{
-			// background-image: url('../images/bg-advancement.png');		
-			min-height: 540px;
+			min-height: 520px;
 			margin-top: 10px;
 			margin-bottom: 20px;
 			background-position: top;
 			background-size: contain;
 			background-repeat: no-repeat;
-			position: relative;			
+			position: relative;					
+			background-position: 0px 290px;
+			background-image: url('../images/bg-advancement.png');
+			@media (max-width: $screen-md-max){
+				background-position:  -25px 330px;
+			}
+			@media (max-width: $screen-sm-max){
+				background-image: none;
+				padding-bottom: 0;
+				margin-bottom: 0;
+			}
 			.dev__step{
 				min-height: 0;
 				padding-bottom: 0;
+				@media (max-width: $screen-sm-max){
+					max-width: 300px;
+					margin: 0 auto;
+					padding-bottom: 40px;  
+				}
 				p{
 					background-color: #fff;
+				}
+				&--bg-arrow-adv{
+					position: relative;
+					&:before{
+						position: absolute;
+						content: '';
+						background-image: url('../images/bg-advancement2.png');
+						width: 100%;
+						height: 100%;
+						background-repeat: no-repeat;
+						left: -30px;
+						top: 65%;
+						@media (max-width: $screen-sm-max){
+							display: none;
+						}
+					}
+					&:after{
+						position: absolute;
+						content: '';
+						background-image: url('../images/bg-advancement3.png');
+						width: 100%;
+						height: 100%;
+						background-repeat: no-repeat;
+						left: 90px;
+						top: -30px;
+						@media (max-width: $screen-md-max){
+							background-image: url('../images/bg-advancement4.png');
+							top: 30px;
+						}
+						@media (max-width: $screen-sm-max){
+							display: none;
+						}
+					}
 				}
 			}			
 			.dev__etaps{
 				span{
 					&:first-child{
-						bottom: 80px;
+						bottom: 55px;
+						@media (max-width: $screen-md-max){
+							bottom: 15px;
+						}
 					}
 					&:nth-child(2){
-						bottom: 65px;
+						bottom: 40px;
 						left: 350px;
+						@media (max-width: $screen-md-max){
+							bottom: 5px;
+							left: 250px;	
+						}
 					}
 					&:nth-child(3){
-						bottom: 80px;
+						bottom: 55px;
 						left: 700px;
+						@media (max-width: $screen-md-max){
+							bottom: 15px;
+							left: 550px;
+						}
 					}
 					&:nth-child(4){
-						bottom: 65px;
+						bottom: 40px;
+						@media (max-width: $screen-md-max){
+							bottom: 5px;
+						}
 					}
 				}
 			}
@@ -165,7 +227,7 @@
 		}
 		&--advancement-wrap{
 			min-height: 165px;
-			min-height: 0;
+			min-height: 0;		
 		}
 	}	
 	&__step-img-wrap{
@@ -177,6 +239,9 @@
 		}
 		&--advancement{
 			max-width: 102px;
+			@media (max-width: $screen-sm-max){
+				margin: 0 auto;
+			}
 		}
 	}
 	&__desc{
