--- a/app/styles/_advancement.scss
+++ b/app/styles/_advancement.scss
@@ -17,4 +17,51 @@
 			max-width: 295px;
 		}
 	}
+	.service__links--dev-links{
+		min-height: 290px;
+		.services__block-wrap{	
+			.services__block--dev{
+				display: inline-block;
+				max-width: 282px;
+				padding-right: 5px;
+				@media (max-width: $screen-sm-max){
+					max-width: 100%;
+				}
+				.services__img-desc{
+					padding-left: 0;
+				}
+
+				.services__img-desc{
+					p{
+						font-size: 18px;
+						@media (max-width: $screen-md-max){
+							font-size: 15px;
+						}
+						@media (max-width: $screen-sm-max){
+							font-size: 16px;
+						}
+					}
+				}
+				.services__img-wrap{
+					.services__img-desc{
+						.price{
+							@media (max-width: $screen-xs-max){
+								padding-left: 80px;								
+							}
+							p{
+								font-size: 18px;
+								font-family: 'ProximaNova';
+
+								span{
+									font-size: 18px;
+									font-family: 'ProximaNova';
+
+								}
+							}
+						}
+					}
+				}
+			}
+		}
+	}
 }
